--- a/public/profile/projects.json
+++ b/public/profile/projects.json
@@ -11,7 +11,7 @@
                 },
                 {
                     "text": "Live",
-                    "href": "https://mayankagarwal.me"
+                    "href": "https://portfolio-rev0li.vercel.app/"
                 }
             ],
             "tags" : [
